--- a/fe/src/index.css
+++ b/fe/src/index.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Sora:wght@300;400;500;600;700&display=swap');
 
 html,
 body,
@@ -6,11 +7,8 @@ body,
 .app {
   height: 100%;
   width: 100%;
-  font-family: "Rubik", sans-serif;
+  font-family: 'Sora', sans-serif;
   box-sizing: border-box;
-
-  
-  
 }
 
 
